add explanation for ssh-keys

--- a/tutorial_tmp.html
+++ b/tutorial_tmp.html
@@ -762,7 +762,7 @@ steps to doing this are:</p>
 start a browser session. You go to <code>https://apps.hpc.ntnu.no/</code>, login and ask
 for a &quot;Visual Studio Code Server&quot;. Once you are given access to a node, you
 will get the following view under &quot;Home/My Interactive Sessions&quot; on the website.</p>
-<p><img src="images/server-allocation.png" alt="Server Allocation"></p>
+<p><img src="file:///Users/jarl/Documents/idun_documentation/images/server-allocation.png" alt="Server Allocation"></p>
 <p>Instead of clicking &quot;Connect to VS Code&quot;, which will send you to the browser
 version, you take note of the host name. In this case, it is
 <code>idun-04-08</code>, but it can be different depending on which particular node you
@@ -799,19 +799,19 @@ Host compute-node
 <p>Now that you have this setup, you can open VSCode and connect to the compute
 node. This is done by pressing the blue button in the bottom right corner of
 VSCode, as seen in the image.</p>
-<p><img src="images/vscode-corner-button.png" alt="Corner button"></p>
+<p><img src="file:///Users/jarl/Documents/idun_documentation/images/vscode-corner-button.png" alt="Corner button"></p>
 <p>This will open the following menu:</p>
-<p><img src="images/vscode-connect-to-host.png" alt="Connect to host"></p>
+<p><img src="file:///Users/jarl/Documents/idun_documentation/images/vscode-connect-to-host.png" alt="Connect to host"></p>
 <p>When you are here, you can click &quot;Connect to Host&quot; or &quot;Connect current window
 to Host&quot;, depending on whether you want a new window or not. When you click
 one of them, you will get the following if you have done everything correctly:</p>
-<p><img src="images/vscode-select-host.png" alt="Select host"></p>
+<p><img src="file:///Users/jarl/Documents/idun_documentation/images/vscode-select-host.png" alt="Select host"></p>
 <p>Now, choose &quot;compute-node&quot;. You will be prompted to enter your password quite
 a lot of times, possibly as many as eight times, so it can be handy to have
 your password in the clipboard or in a password manager, or just using SSH keys
 like explained at the top of this tutorial. After typing your
 password a couple of times, you will get this screen:</p>
-<p><img src="images/vscode-select-folder.png" alt="Select folder"></p>
+<p><img src="file:///Users/jarl/Documents/idun_documentation/images/vscode-select-folder.png" alt="Select folder"></p>
 <p>At this point, choose which folder you want to work in by clicking &quot;open folder&quot;
 on the left side. After clicking &quot;OK&quot;, you will have to type your password a
 couple of more times, unless you are using SSH keys.</p>
